Demo app: Fix top of save dialog goes off screen on some devices

--- a/docs/demo/style.css
+++ b/docs/demo/style.css
@@ -72,7 +72,6 @@
 	z-index: 100;
 	top: 0;
 	left: 0;
-	bottom: 0;
 	right: 0;
 
 	padding: 0;
